# RecettesBot

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  agent.py  alembic.ini  ansible.cfg  bot.py  db.py  docker-compose.yml  embedding.py  entrypoint.sh  inventory.yaml  main.py  models.py  pdf.py  pyproject.toml  settings.py
migrations/: env.py  script.py.mako
migrations/versions/: 5a9912c4c8ce_enable_pgvector_extension.py  678fa448339a_create_recipe_and_ingredient_tables.py
playbooks/: rb_deployment.yaml  recettesbot_deployment.yaml
roles/rb_deployment/tasks/: main.yaml
roles/recettesbot_deployment/tasks/: main.yaml
tests/: conftest.py  test_settings.py
tests/e2e/: conftest.py  test_flows.py
tests/integration/: conftest.py  test_database.py  test_models.py
tests/mocks/: __init__.py  database.py  factories.py  stubs.py  telegram.py
tests/unit/: conftest.py  test_agent.py  test_bot.py  test_embedding.py  test_models.py  test_pdf.py
